--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -174,6 +174,10 @@ geolocation.shareLocation.accesskey=a
 geolocation.dontShareLocation=Don't Share
 geolocation.dontShareLocation.accesskey=o
 geolocation.siteWantsToKnow=%S wants to know your location.
+# LOCALIZATION NOTE (geolocation.learnMore): Use the unicode ellipsis char, \u2026,
+# or use "..." unless \u2026 doesn't suit traditions in your locale.
+geolocation.learnMore=Learn More…
+geolocation.remember=Remember for this site
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
